--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     d3.csv(url).then(data => {
       data.forEach(d => {
         if (d.lat && d.lng) {
-          const marker = L.circleMarker([+d.lat, +d.lng], {
+          const marker = L.circleMarker([+d.Latitude, +d.Longitude], {
             radius: 6,
             fillColor: iconColor,
             color: "#000",
