--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             weight: 1,
             opacity: 1,
             fillOpacity: 0.8
-          }).bindPopup(d.school || 'Unnamed');
+          }).bindPopup(d['學校名稱'] || '未命名學校');
           marker.addTo(layer);
         }
       });
