--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                     preferCanvas: false,
                 }
             );
+            const map = map_fb1fb2ff0fcb7cb81c3c7fdf9482f49f;
 
             
 
