--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     box-shadow: 2px 2px 6px rgba(0,0,0,0.15);
     z-index: 9999;
 ">
-<b>CXL 區域劃分｜區域說明</b><br/>
-<div><span style="background-color:#e41a1c; display:inline-block; width:12px; height:12px; margin-right:6px;"></span>北北區</div>
+<b>🏀 CXL 區域劃分說明</b><br/>
+<div><span style="background-color:#e41a1c; display:inline-block; width:12px; height:12px; margin-right:6px;"></span>區域1: 北北區（台北、新北、基隆、宜蘭）</div>
 <div><span style="background-color:#ff7f00; display:inline-block; width:12px; height:12px; margin-right:6px;"></span>桃竹區</div>
 <div><span style="background-color:#4daf4a; display:inline-block; width:12px; height:12px; margin-right:6px;"></span>台中區</div>
 <div><span style="background-color:#377eb8; display:inline-block; width:12px; height:12px; margin-right:6px;"></span>彰化區</div>
