--- a/index.html
+++ b/index.html
@@ -33,32 +33,29 @@
 </head>
 <body>
 <div class="folium-map" id="map_fb1fb2ff0fcb7cb81c3c7fdf9482f49f"></div>
-<div style="
-    position: fixed;
-    bottom: 50px;
-    left: 50px;
-    width: 260px;
-    background-color: white;
-    padding: 12px 16px;
-    border: 1.5px solid #888;
-    border-radius: 8px;
-    font-size: 13px;
-    line-height: 1.6;
-    box-shadow: 2px 2px 6px rgba(0,0,0,0.15);
-    z-index: 9999;
-">
-<b>🏀 CXL 區域劃分說明</b><br/>
-<div><span style="background-color:#e41a1c; display:inline-block; width:12px; height:12px; margin-right:6px;"></span>區域1: 北北區（台北、新北、基隆、宜蘭）</div>
-<div><span style="background-color:#ff7f00; display:inline-block; width:12px; height:12px; margin-right:6px;"></span>桃竹區</div>
-<div><span style="background-color:#4daf4a; display:inline-block; width:12px; height:12px; margin-right:6px;"></span>台中區</div>
-<div><span style="background-color:#377eb8; display:inline-block; width:12px; height:12px; margin-right:6px;"></span>彰化區</div>
-<div><span style="background-color:#984ea3; display:inline-block; width:12px; height:12px; margin-right:6px;"></span>嘉南區</div>
-<div><span style="background-color:#a65628; display:inline-block; width:12px; height:12px; margin-right:6px;"></span>高雄區</div>
-<div><span style="background-color:#f781bf; display:inline-block; width:12px; height:12px; margin-right:6px;"></span>花蓮區</div>
-<br/>
-<div><span style="background-color:#999999; display:inline-block; width:12px; height:12px; margin-right:6px;"></span>浮動小區：台東區</div>
-<div><span style="background-color:#66c2a5; display:inline-block; width:12px; height:12px; margin-right:6px;"></span>特邀支援區：澎湖縣、金門縣、連江縣</div>
+<div id="regionKey" style="position: fixed; bottom: 10px; left: 10px; z-index:9999; background:white; padding: 10px; border-radius: 8px; box-shadow: 2px 2px 8px rgba(0,0,0,0.2); font-size: 14px; max-width: 280px;">
+  <div id="keyHeader" style="cursor: pointer; font-weight: bold;">
+    🏀 CXL 區域劃分說明 <span id="toggleBtn" style="float:right;">➖</span>
+  </div>
+  <div id="keyContent">
+    <p style="margin: 6px 0;">
+    為了讓更多學生能就近參與運動賽事，我們將台灣劃分為七大核心區與浮動／特邀支援區，方便各地建立完整且永續的賽季制度。這是我們目前的初步劃分，未來也會依照實際需求與回饋持續調整與進化，共同打造一個真正適合台灣的系統。
+    </p>
+    <hr>
+    <div style="line-height: 1.6;">
+    🟦 區域1: 北北區（台北、新北、基隆、宜蘭）<br>
+    🟣 區域2: 桃竹區（桃園、新竹、苗栗）<br>
+    🟥 區域3: 台中區（台中）<br>
+    🟧 區域4: 彰化區（彰化、南投）<br>
+    🟩 區域5: 嘉南區（台南、嘉義、雲林）<br>
+    🔵 區域6: 高雄區（高雄、屏東）<br>
+    🟦 區域7: 花蓮區（花蓮）<br>
+    🟩 浮動小區：台東區<br>
+    ⚫ 特邀支援區：澎湖、金門、連江
+    </div>
+  </div>
 </div>
+
 
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script>
